objects/Partner_Account_Config__c.object
<CustomObject>
    <fields>
        <fullName>Account_Access_Level__c</fullName>
        <defaultValue>&quot;Read&quot;</defaultValue>
        <globalPicklist>Record_Access_Type</globalPicklist>
        <label>Account Access Level</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You need to select non-partner Account.</errorMessage>
            <filterItems>
                <field>Account.Portal_User_Type__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Account Configs (Account)</relationshipLabel>
        <relationshipName>Partner_Account_Configs1</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Access_Level__c</fullName>
        <globalPicklist>Record_Access_Type</globalPicklist>
        <label>Contact Access Level</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opportunity_Access_Level__c</fullName>
        <globalPicklist>Record_Access_Type</globalPicklist>
        <label>Opportunity Access Level</label>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>You need to select Partner Account.</errorMessage>
            <filterItems>
                <field>Account.Portal_User_Type__c</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.Portal_User_Type__c</field>
                <operation>equals</operation>
                <value>Rep</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Partner Account Configs</relationshipLabel>
        <relationshipName>Partner_Account_Configs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Partner Account Config</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Account Configs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>